# digital-asset-api-threat-detection-lab

./: .gitignore  Makefile  README.md  pyproject.toml
config/: detection_defaults.json  simulation_profile.json
data/scenarios/: scenario_library.json
docs/: DEFINITION_OF_DONE.md  DEMO_FLOW.md  ISSUES.md  PROJECT_IDEA.md  REPO_STRUCTURE.md  SIMULATOR_SPEC.md
docs/detections/: ALERT_SCHEMA.md  RULE_ENGINE.md  TRIAGE_WORKFLOW.md
docs/scenarios/: ATTACK_MAPPING.md  SCENARIO_CATALOG.md
docs/tuning/: FALSE_POSITIVE_ANALYSIS.md
reports/cases/: CASE-001-suspicious-withdrawal-tp.md  CASE-002-api-key-replay-tp.md  CASE-003-withdrawal-fp.md
reports/incidents/evidence/: CASE-001-evidence.json  CASE-002-evidence.json  CASE-003-evidence.json
reports/metrics/: I-008-tuning-report.md
reports/portfolio/: APPLICATION_ANSWER.md  EVIDENCE_MAP.md  RESUME_BULLETS.md
reports/tickets/: CASE-001-ticket.md  CASE-002-ticket.md  CASE-003-ticket.md
runbooks/: RB-001-phishing-token-abuse.md  RB-002-suspicious-login.md  RB-003-api-key-misuse.md  RB-004-malware-like-endpoint-signal.md  RB-005-exfiltration-burst.md  README.md
runbooks/templates/: containment_action_matrix.md  escalation_handoff_template.md
scripts/: demo.py  enrich_alerts.py  evaluate_tuning.py  generate_activity.py  run_detections.py
tests/: test_case_artifacts.py  test_demo_flow.py  test_detection_engine.py  test_portfolio_packaging.py  test_runbook_completeness.py  test_scaffold_smoke.py  test_scenario_library.py  test_simulator_profiles.py  test_triage_enrichment.py  test_tuning_metrics.py
(+10 files in other folders)
